@@ -151,6 +151,7 @@ cp $VERBOSE data/*.cvnx data/*.net /usr/share/vnx/examples/
 cp $VERBOSE -r data/conf /usr/share/vnx/examples/
 cp $VERBOSE -r data/scripts /usr/share/vnx/examples/
 cp $VERBOSE -r data/tutorial_ubuntu_modify /usr/share/vnx/examples/
+mkdir -p /usr/share/vnx/examples/shared
 chmod 644 /usr/share/vnx/examples/*
 chmod +x /usr/share/vnx/examples/conf
 
